[project]
name = "augmented-bi-mcp"
version = "0.1.0"
description = "Remote MCP Server for Data Analysis tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pandas>=2.3.1",
]
